# church-rs

./: .travis.yml  Cargo.toml  README.md  out.rs
src/: example.church  lib.rs  main.rs  tasks.org
src/church/: error.rs  eval.rs  lexer.rs  mod.rs  parser.rs  primatives.rs  token.rs  tokens.rs  utils.rs
