[package]
name = "church"
version = "0.1.0"
authors = ["nick"]

[features]
stable = ["lazy_static"]
nightly = ["phf", "phf_macros"]

[dependencies]
nom = "^3.2.1"
quick-error = "1.2.1"


# Optional dependancies
lazy_static = {"1.0.0", optional = true}
phf = {"0.7.21", optional = true}
phf_macros = {"0.7.21", optional = true}

